# ChangeLog for net-nds/openldap
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nds/openldap/ChangeLog,v 1.261 2007/04/06 11:03:52 jokey Exp $

*openldap-2.3.34-r1 (06 Apr 2007)

  06 Apr 2007; Markus Ullmann <jokey@gentoo.org>
  +files/openldap-2.3.34-slapd-conf, +openldap-2.3.34-r1.ebuild:
  Add built backends module population to config file and fix bug #163652 ,
  bug #172998 and bug #170648

  26 Mar 2007; Markus Ullmann <jokey@gentoo.org>
  -openldap-2.1.30-r10.ebuild:
  Drop 2.1

*openldap-2.3.34 (26 Mar 2007)

  26 Mar 2007; Markus Ullmann <jokey@gentoo.org> +openldap-2.3.34.ebuild:
  Version bump

  16 Feb 2007; Markus Ullmann <jokey@gentoo.org> openldap-2.2.28-r7.ebuild,
  -openldap-2.3.27-r3.ebuild, openldap-2.3.30-r2.ebuild,
  openldap-2.3.33.ebuild:
  Fix liblber wrt bug #164626 and drop unneeded version

  20 Jan 2007; Markus Ullmann <jokey@gentoo.org> openldap-2.1.30-r10.ebuild:
  Fix a patch call

*openldap-2.3.33 (19 Jan 2007)

  19 Jan 2007; Markus Ullmann <jokey@gentoo.org> -openldap-2.3.32.ebuild,
  +openldap-2.3.33.ebuild:
  Version bump (should fix bug #162587 as well)

  16 Jan 2007; Markus Ullmann <jokey@gentoo.org>
  -files/openldap-2.1.27-db40.patch,
  -files/openldap-2.1.27-perlthreadsfix.patch,
  -files/openldap-2.1.30-autoconf-archived-fix.patch,
  -files/openldap-2.1.30-autoconf25.patch,
  -files/openldap-2.1.30-db40.patch, -files/openldap-2.1.30-glibc24.patch,
  -files/openldap-2.1.30-m4_underquoted.patch,
  -files/openldap-2.1.30-rpath.patch, -files/openldap-2.1.30-tests.patch,
  -files/openldap-2.1.30-tls-activedirectory-hang-fix.patch,
  -files/openldap-2.1.30-ximian_connector.patch,
  -files/openldap-2.2.14-db40.patch,
  -files/openldap-2.2.26-tls-fix-connection-test.patch,
  -files/openldap-2.2.28-autoconf-archived-fix.patch,
  -files/openldap-2.2.28-cleartext-passwords.patch,
  -files/openldap-2.2.28-r1-configure.in-rpath.patch,
  -files/openldap-2.2.28-tests.patch,