@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX DB_CONFIG.fast.example 746 RMD160 03d179d1c58d695c442eb5e3e69c245f3c2f2358 SHA1 c76a2a9f346a733ed6617d42229b434ce723c59e SHA256 69fc9aa6e4f0b888bc02d3f75642fe1ebf9345c685257a5c1236b2e79ed56e0b
 MD5 d00ccd5b4b44ac1df463da80d5ebb8a1 files/DB_CONFIG.fast.example 746
 RMD160 03d179d1c58d695c442eb5e3e69c245f3c2f2358 files/DB_CONFIG.fast.example 746
@@ -36,7 +39,6 @@ RMD160 9f3a06bcab2e4ce8e66783af506d26595bbbdcd2 files/slurpd-initd 494
 SHA256 b23e010f701620ec34c39cd215891c7c0afc773341392a1e762e84166d9863ff files/slurpd-initd 494
 DIST openldap-2.2.28.tgz 2630427 RMD160 ca3f5aff42e6afc6b7c0a62beb8c13d4ff43d44c SHA1 0b3a3b9b61f6f033685218957fb84ba1d58887de SHA256 05c75b719305578dec799f05eaddae6b77eb51857abc6284e47b6abc4317dfba
 DIST openldap-2.3.30.tgz 3763533 RMD160 4cafe33efcc1cf3baedc73a89f115a659407a710 SHA1 99dd73df2bdf3ac303b2a81ee2c689a2ee09e13a SHA256 3b27a5666dbe4584612be443bfa636238a48f3c16a4dc8f43d59171e8697687b
-DIST openldap-2.3.33.tgz 3787010 RMD160 b06c7a566d2b2673b479343efa32e8f852541f43 SHA1 594421dc510adb0bc80262b17fff20c113472609 SHA256 c0f14356b77858d52ab47306fd908d7e99159956c3fabb48ca6d8fb127372c4f
 DIST openldap-2.3.34.tgz 3791412 RMD160 78d01bb09bc2c0e3cc55cce96239072fa5641847 SHA1 f56fb1e2ef150d09f9b4aa8af9f47015de71d5a8 SHA256 be1e258de7bb15969ede7dfc0f0dc163b337393846d872be6c9f3fb87b8d0f0e
 DIST openldap-compatversions-patchset-1.0.tar.bz2 10547 RMD160 7d6200e26fe8818934a94b4cf192f8e53df5dc2c SHA1 eb6dfb169023e88f08ee93baabcf9293bc29e5f5 SHA256 8b0a7b0c16601405a623012f84f9edba698cb708aea953da3d2f51da26d35c26
 EBUILD openldap-2.2.28-r7.ebuild 11822 RMD160 9ac18b128cbe7071cf978ed0cd007f9efaebc0fc SHA1 5d986ee8f6796143ae73e4e5d0c724f4ea21cb35 SHA256 e34b9bc86ebba150dc0e3efe4683521d1c401c47071d2201261576a971804b7c
@@ -47,10 +49,6 @@ EBUILD openldap-2.3.30-r2.ebuild 16355 RMD160 c48b061fd1d6dfd1475f6bd038983ff276
 MD5 533ce6d364b41297af03b9fd2aa1cc09 openldap-2.3.30-r2.ebuild 16355
 RMD160 c48b061fd1d6dfd1475f6bd038983ff276faf5cc openldap-2.3.30-r2.ebuild 16355
 SHA256 bad99f0a60f9c8a666533cf95ae098658216d59a5ad3d736cdd3c57ac3aca56d openldap-2.3.30-r2.ebuild 16355
-EBUILD openldap-2.3.33.ebuild 16354 RMD160 d976b3d739d72d377d70608b4723c46cf136f071 SHA1 634022738a3599b3741f468da416d158d318fdf1 SHA256 3aae7bfa23b8bbd2bff53a5e102231450fd6bf57d43a79794f1c079038fc8a1a
-MD5 6f4a67aee02b0f07948aecd2c54818cb openldap-2.3.33.ebuild 16354
-RMD160 d976b3d739d72d377d70608b4723c46cf136f071 openldap-2.3.33.ebuild 16354
-SHA256 3aae7bfa23b8bbd2bff53a5e102231450fd6bf57d43a79794f1c079038fc8a1a openldap-2.3.33.ebuild 16354
 EBUILD openldap-2.3.34-r1.ebuild 16572 RMD160 37120a930924dec1d38207ffb551ab6faa789865 SHA1 a9cba2b3e009156e0c5ca5cb639e042d05baf2c5 SHA256 3370b652beb02feac93cd8e8c3e99247fc81fc2128e54b17f9ca6d7644d9f3b6
 MD5 824e55b96cacd4aab40ee745cf4054c2 openldap-2.3.34-r1.ebuild 16572
 RMD160 37120a930924dec1d38207ffb551ab6faa789865 openldap-2.3.34-r1.ebuild 16572
@@ -59,10 +57,10 @@ EBUILD openldap-2.3.34.ebuild 16354 RMD160 5b671d299972cb62625d1b83b345b96f79e95
 MD5 8d89d0d955daf4f158a2c7a0ea1782b8 openldap-2.3.34.ebuild 16354
 RMD160 5b671d299972cb62625d1b83b345b96f79e95679 openldap-2.3.34.ebuild 16354
 SHA256 24578705b253a0a60cb54cbab501be9c699651a843a837d81ae8f5261a3c289e openldap-2.3.34.ebuild 16354
-MISC ChangeLog 46453 RMD160 53fff36af861115d9e4941bf565c0c2fa2f5de58 SHA1 4228b443b67eb3c6f6ad7a9fc2e1d21a02ad17da SHA256 322e7e4fd41856bef01b9c726fc630614cac18b0fa2ccf868fc732ae7f6d3581
-MD5 5485221780d6a8dfea356d34c69be2eb ChangeLog 46453
-RMD160 53fff36af861115d9e4941bf565c0c2fa2f5de58 ChangeLog 46453
-SHA256 322e7e4fd41856bef01b9c726fc630614cac18b0fa2ccf868fc732ae7f6d3581 ChangeLog 46453
+MISC ChangeLog 46547 RMD160 4c4efce2b41a59f1cd2c5dba8ae6701b7ce87e69 SHA1 65b1215d10b810f61c6d08631882cf9df050e685 SHA256 341679ec45db6fe282d68c5e60caaf1b80aa53055da9ee6f9198b5662a8e9f47
+MD5 7a6bc132fc7ac9f478d0a43a21395374 ChangeLog 46547
+RMD160 4c4efce2b41a59f1cd2c5dba8ae6701b7ce87e69 ChangeLog 46547
+SHA256 341679ec45db6fe282d68c5e60caaf1b80aa53055da9ee6f9198b5662a8e9f47 ChangeLog 46547
 MISC metadata.xml 240 RMD160 3dfef965b1bac3faa4abfec78fb98b0ed5a9ddaf SHA1 21c64f9ef102b6649bccfca61f06d7b328ef1727 SHA256 fecb6db825d33099fa9f18392db0b7a5ab89a4895ac6ca0f8a2313f348dfaaa6
 MD5 9a8efd7efb44b06913bf1d906d493407 metadata.xml 240
 RMD160 3dfef965b1bac3faa4abfec78fb98b0ed5a9ddaf metadata.xml 240
@@ -73,12 +71,16 @@ SHA256 61bde84c81976ceb65369263a2ed306e0ce296f57b832a15dad2d5f57fd5fc22 files/di
 MD5 e912b83e7dba93d81b8fad6d2df489b1 files/digest-openldap-2.3.30-r2 241
 RMD160 a308c1e798233f0f862c0d5556f2543075738d0b files/digest-openldap-2.3.30-r2 241
 SHA256 eecda55d0b9bcbce0abc0a292f082d4d9979c1133ef593b43f7ad11eeadf0933 files/digest-openldap-2.3.30-r2 241
-MD5 43896b93a1f438a00afaee2ac013a82b files/digest-openldap-2.3.33 241
-RMD160 e0b76c5a0d24dcde7d48256735ff21eab7e82464 files/digest-openldap-2.3.33 241
-SHA256 6947a1a2ab466ec8d914b8f3d58cd8d8f2135962ffb23a840686bb48f7082081 files/digest-openldap-2.3.33 241
 MD5 a36a4d5b98e1e91f51e0cc934be7bb0f files/digest-openldap-2.3.34 241
 RMD160 7443a8589b0719ed79fadb01a2d9cd30bfff56a9 files/digest-openldap-2.3.34 241
 SHA256 556c93efd750d5e3b35ff047b524c5bf7dddb0f8fecd6992adf9e6b1606f1a99 files/digest-openldap-2.3.34 241
 MD5 a36a4d5b98e1e91f51e0cc934be7bb0f files/digest-openldap-2.3.34-r1 241
 RMD160 7443a8589b0719ed79fadb01a2d9cd30bfff56a9 files/digest-openldap-2.3.34-r1 241
 SHA256 556c93efd750d5e3b35ff047b524c5bf7dddb0f8fecd6992adf9e6b1606f1a99 files/digest-openldap-2.3.34-r1 241
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.3 (GNU/Linux)
+
+iD8DBQFGFip5z974XjDVpbkRAlldAJ4jGYAaI+dLmZXrpWCSZ9MHe5O+9wCguGP3
+3TMyD+BnkkDBgi4o0K1+DJQ=
+=VGJa
+-----END PGP SIGNATURE-----
