@@ -1,3 +1,0 @@
-MD5 79d78ddbf14ac0792103665fadbefb26 openldap-2.3.33.tgz 3787010
-RMD160 b06c7a566d2b2673b479343efa32e8f852541f43 openldap-2.3.33.tgz 3787010
-SHA256 c0f14356b77858d52ab47306fd908d7e99159956c3fabb48ca6d8fb127372c4f openldap-2.3.33.tgz 3787010
