@@ -1,6 +1,9 @@
 # ChangeLog for net-nds/openldap
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/openldap/ChangeLog,v 1.261 2007/04/06 11:03:52 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/openldap/ChangeLog,v 1.262 2007/04/06 11:09:40 jokey Exp $
+
+  06 Apr 2007; Markus Ullmann <jokey@gentoo.org> -openldap-2.3.33.ebuild:
+  Drop old version
 
 *openldap-2.3.34-r1 (06 Apr 2007)
 
